# illusion-inspired-design

./: .gitignore  README.md  data_base.py  data_cifar10.py  data_cifar100.py  data_indl.py  data_indl_and_cifar100.py  dataset_try.py  download.py  generate.py  main.py  poc.ipynb  processing.py  pyproject.toml  requirements.txt  test.py  train.py  train.sh  train_base.py  train_comp.py  train_comp_reverse.py  train_m_A.py  train_m_B.py  train_m_X.py
code/: main.py
code/data/: cifar10.py  cifar100.py  indl.py  indl_and_cifar10.py
code/model/: _base.py  comp.py  model_100.py  model_102.py  model_103.py  (+2 more)
config/: _base.yaml  m_A-none-indl224.yaml  m_B-none-imagenet1k.yaml  m_X-103-imagenet1k.yaml
data/: __init__.py  _base.py  cifar10.py  cifar100.py  data102_indl_and_cifar100.py  data12_indl_and_cifar10.py  imagenet100.py  imagenet1k.py  imagenet1k_filter100.py  indl.py  indl224.py  indl224_filtered.py  indl32.py  indl_and_cifar100.py  indl_and_imagenet100.py  indl_and_imagenet100_202.py  indl_and_imagenet1k.py  indl_filtered_and_imagenet100.py
model/: __init__.py  _base.py  model.py  model_102.py  model_102_v2.py  model_102_v3.py  model_103.py  model_202.py  model_comp.py  model_comp_reverse.py  model_vae.py  model_vae_adapter.py
notebook/: 00.build_env.ipynb  01.init_datasets.ipynb  02.train.ipynb
notebooks/: model_baseline.ipynb  poc.ipynb
script/: generate_dataset.sh  main.sh  mk_ckpt_dirs.sh  run102and103.sh  train.sh  train_all.bat  train_all.sh  train_all_ciai.sh  train_varying_strength.sh
train/: m_B.py  m_B_hydra.py  m_X_102.py  m_X_102_v2.py
(+50 files in other folders)
