[project]
name = "illusion-res"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio[ffmpeg,pyav]>=2.35.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pyllusion>=1.3",
    "tqdm>=4.66.5",
    "torch>=2.4.0",
    "torchao>=0.5.0",
    "torchvision>=0.19.0",
    "transformers>=4.45.2",
    "wandb>=0.18.5",
    "timm>=1.0.11",
    "scikit-learn>=1.5.2",
    "lightning>=2.4.0",
]
